abstract/fig kopje niet over het menu heen (z-index fix)

--- a/style.css
+++ b/style.css
@@ -1060,7 +1060,7 @@ input[name=verzendknop]:hover, input[name=Verzendknop]:focus {
 		font-weight: 500;
 
 		text-align: center;
-		z-index: 90;
+		z-index: 10;
 	}
 
 	#abstract_keuze_kopje {
